--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "author": "junghyeonsu <jung660317@naver.com>",
   "license": "MIT",
   "scripts": {
-    "start" : "node index.js",
-    "prestart" : "npx tsc"
+    "start": "tsc-watch --onSuccess \" node dist/index.js\" "
+  },
+  "devDependencies": {
+    "tsc-watch": "^4.2.9"
+  },
+  "dependencies": {
+    "typescript": "^4.1.3"
   }
 }
