--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "ES5",
-        "sourceMap": true
+        "sourceMap": true,
+        "outDir": "dist"
     },
-    "include": ["index.ts"],
+    "include": ["src/index.ts"],
     "exclude": ["node_modules"]
 }
