--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "start": "tsc-watch --onSuccess \" node dist/index.js\" "
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
     "tsc-watch": "^4.2.9"
   },
   "dependencies": {
+    "crypto-js": "^4.0.0",
     "typescript": "^4.1.3"
   }
 }
